--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
-.App {
-  text-align: center;
+body{
+  height:100%;
 }
-
+.APP {
+  height:100%;
+}
+#root{
+  height:100%;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
